--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <html>
 	<head>
-		<title></title>
+		<meta charset="utf-8">
+		<meta http-equiv="pragma" content="no-cache">
+		<script src="js/app.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<title>Mind the door</title>
 	</head>
 	<body>
 
