first section content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,18 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<title>Mind the door</title>
 	</head>
-	<body>
+	<body role="application">
+
+		<section role="region">
+			<header>
+				<h1>Mind the door</h1>
+				<button id="lock-door">Lock the door!</button>
+			</header>
+		</section>
+		
+		<section role="region">
+
+		</section>
 
 	</body>
 </html>
