--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 	</head>
 	<body role="application">
 
-		<section role="region">
+		<section role="region" id="main-screen">
 			<header>
 				<h1>Mind the door</h1>
-				<button id="lock-door">Lock the door!</button>
+				<button id="btn-lock-door">Lock the door!</button>
 			</header>
 		</section>
 		
-		<section role="region">
-
+		<section role="region" id="door-locked-screen">
+			<header>
+				<h1>Your door is locked.</h1>
+				<button id="btn-come-back-home">I'm back!</button>
+			</header>
 		</section>
 
 	</body>
