include fontAwesome, css icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta http-equiv="pragma" content="no-cache">
 		<script src="js/app.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/font-awesome.css" />
 		<title>Mind the door</title>
 	</head>
 	<body role="application">
@@ -11,7 +13,8 @@
 		<section role="region" id="main-screen">
 			<header>
 				<h1>Mind the door</h1>
-				<button id="btn-lock-door">Lock the door!</button>
+				
+				<button id="btn-lock-door"><i class="fa fa-unlock icon-lock-open"></i></button>
 			</header>
 		</section>
 		
