icons both screen, colors, text

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 		<section role="region" id="main-screen">
 			<header>
-				<h1>Mind the door</h1>
+				<h1>mind the door.</h1>
 				
-				<button id="btn-lock-door"><i class="fa fa-unlock icon-lock-open"></i></button>
+				<button id="btn-lock-door"><i class="fa fa-unlock-alt icon-lock-open"></i></button>
 			</header>
 		</section>
 		
 		<section role="region" id="door-locked-screen">
 			<header>
-				<h1>Your door is locked.</h1>
-				<button id="btn-come-back-home">I'm back!</button>
+				<h1>don't mind the door.</h1>
+				<button id="btn-come-back-home"><i class="fa fa-lock icon-lock-close"></i></button>
 			</header>
 		</section>
 
