--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="pragma" content="no-cache">
+		<script src="js/model.js"></script>
 		<script src="js/app.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
