animation fade load, position div text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 
 		<section role="region" id="main-screen">
 			<header>
-				<h1>mind the door.</h1>
+				<div class="title-space">
+					<h1>MIND THE DOOR</h1>
+				</div>
+				
 				<p>
 					<button id="btn-lock-door"><i class="fa fa-unlock-alt icon-lock-open"></i></button>
 				</p>
@@ -23,7 +26,9 @@
 		
 		<section role="region" id="door-locked-screen">
 			<header>
-				<h1>don't mind the door.</h1>
+				<div class="title-space">
+					<h1>DON'T MIND THE DOOR</h1>
+				</div>
 				<p>
 					<button id="btn-come-back-home"><i class="fa fa-lock icon-lock-close"></i></button>
 				</p>
