Displaying lock time

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 				<p>
 					<button id="btn-come-back-home"><i class="fa fa-lock icon-lock-close"></i></button>
 				</p>
+				<p id='label-time-ago'><p/>
 			</header>
 		</section>
 
