--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<p>
 					<button id="btn-come-back-home"><i class="fa fa-lock icon-lock-close"></i></button>
 				</p>
-				<p id='label-time-ago'><p/>
+				<p id='label-time-ago' class="time-ago-style"><p/>
 			</header>
 		</section>
 
